Allow user to delete todo

--- a/011-todo-list/tsconfig.json
+++ b/011-todo-list/tsconfig.json
@@ -19,7 +19,8 @@
     "noFallthroughCasesInSwitch": true,
     /* Resolve paths */
     "paths": {
-      "@components/*": ["./src/App/Components/*"]
+      "@components/*": ["./src/App/Components/*"],
+      "@icons/*": ["./src/Icons/*"]
     }
   },
   "include": ["src"],
