wip: Add menu button to eventually toggle units

--- a/012-weather-app/tsconfig.json
+++ b/012-weather-app/tsconfig.json
@@ -20,7 +20,8 @@
     /* Resolve paths */
     "paths": {
       "@components/*": ["./src/App/Components/*"],
-      "@utils/*": ["./src/App/Utilities/*"]
+      "@utils/*": ["./src/App/Utilities/*"],
+      "@icons/*": ["./src/App/Icons/*"]
     }
   },
   "include": ["src"],
