Separate interfaces, types, and utilities

--- a/012-weather-app/tsconfig.json
+++ b/012-weather-app/tsconfig.json
@@ -19,9 +19,7 @@
     "noFallthroughCasesInSwitch": true,
     /* Resolve paths */
     "paths": {
-      "@components/*": ["./src/App/Components/*"],
-      "@utils/*": ["./src/App/Utilities/*"],
-      "@icons/*": ["./src/App/Icons/*"]
+      "App/*": ["./src/App/*"]
     }
   },
   "include": ["src"],
